Fix project modal alignment for desktop

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -74,7 +74,7 @@
   }
 
   .modal-img-size {
-    height: 586px;
+    height: 486px;
   }
 
   #footer {
@@ -104,7 +104,7 @@
   .project-description-container {
     display: grid;
     grid-template-columns: 1fr 0.5fr;
-    padding: 59px 24px;
+    padding: 39px 24px;
   }
 
   .about-container {
@@ -120,7 +120,7 @@
     width: 97%;
   }
 
-  .skill-content > ul {
+  .skill-content>ul {
     display: flex;
     gap: 12px;
   }
